force-app/main/default/objects/vlocity_cmt__Premises__c/vlocity_cmt__Premises__c.object-meta.xml
<CustomObject>
    <description>A complex, building or house, together with its land and outbuildings, occupied by businesses or tenants. In the communications and media industry, it may be a location where services such as wired phone or cable TV services are provided to customers. A premises record may optionally represent a location within a premises, such as a particular building on a property, a floor of a building, or some other subset of the larger premises where equipment may be deployed.</description>
    <label>Premises</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Premises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>