force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__Address2__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Address2__c</fullName>
    <description>Additional premises address information - 2.</description>
    <label>Street Supplement 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>