force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__AlternateCity__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AlternateCity__c</fullName>
    <label>Alternate City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>