force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__AlternateCountry__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AlternateCountry__c</fullName>
    <label>Alternate Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>