force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__AlternateStreetAddress__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AlternateStreetAddress__c</fullName>
    <label>Alternate Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>