force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__AutoNumber__c</fullName>
    <label>Auto Number</label>
    <type>AutoNumber</type>
</CustomField>