force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__DistributionArea__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__DistributionArea__c</fullName>
    <description>The name of the Distribution Region that the Premises is located in (or Distribution Company that is responsible for supplying a commodity to the Premises)</description>
    <label>Distribution Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Armagh</fullName>
            </value>
            <value>
                <fullName>Chichester</fullName>
            </value>
            <value>
                <fullName>Derby</fullName>
            </value>
            <value>
                <fullName>Salisbury</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>