force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__Floor__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Floor__c</fullName>
    <description>The floor in a building where Premises is located.</description>
    <label>Floor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>