force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Geolocation__c</fullName>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>