force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__HouseNumberSupplement__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__HouseNumberSupplement__c</fullName>
    <description>House number supplement of given Premises.</description>
    <label>House Number Supplement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>