force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__IsKeyAtPremises__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsKeyAtPremises__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that a key is available at the premises to access the meter.</description>
    <label>Key at Premises</label>
    <type>Checkbox</type>
</CustomField>