force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__IsOkToEnter__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsOkToEnter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates a field service rep has permission to enter the premise for meter read or other field activities.</description>
    <label>Ok to Enter</label>
    <type>Checkbox</type>
</CustomField>