force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__IsSupplyGuaranteed__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__IsSupplyGuaranteed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Supply cannot be turned off for the premises.</description>
    <label>Supply Guaranteed</label>
    <type>Checkbox</type>
</CustomField>