force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Jurisdiction__c</fullName>
    <description>Jurisdiction in which the Premises exists.</description>
    <label>Jurisdiction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Jurisdiction A</fullName>
            </value>
            <value>
                <fullName>Jurisdiction B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>