force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__NumberOfOccupants__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__NumberOfOccupants__c</fullName>
    <description>Number of occupants located at the premises.</description>
    <label>Number of Occupants</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>