force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__ParentPremisesId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ParentPremisesId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Premises</label>
    <referenceTo>vlocity_cmt__Premises__c</referenceTo>
    <relationshipLabel>Child Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>