force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__PropertyOwnerAccountId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__PropertyOwnerAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the customer account that is considered the titled owner of this premises. Used in energy and utilities implementations to identify who should be charged for services after one tenant leaves and before a new tenant moves in.</description>
    <label>Property Owner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Premises</relationshipLabel>
    <relationshipName>Premises</relationshipName>
    <type>Lookup</type>
</CustomField>