force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__SupplyGuaranteeReason__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__SupplyGuaranteeReason__c</fullName>
    <description>Supply cannot be turned off for the premises - reason</description>
    <label>Supply Guarantee Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Medical Device</fullName>
            </value>
            <value>
                <fullName>Contractual Agreement</fullName>
            </value>
            <value>
                <fullName>National Security</fullName>
            </value>
            <value>
                <fullName>Public Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>