force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__TimeZone__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TimeZone__c</fullName>
    <description>Timezone of this premises.</description>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>vlocity_cmt__VlocityTimeZones</valueSetName>
    </valueSet>
</CustomField>