force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__TrendArea__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__TrendArea__c</fullName>
    <description>Premises location classification</description>
    <label>Trend Area</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>