force-app/main/default/objects/vlocity_cmt__Premises__c/fields/vlocity_cmt__UnitNumber__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__UnitNumber__c</fullName>
    <description>Unit / Apartment number of this Premises.</description>
    <label>Unit / Apartment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>