force-app/main/default/objects/vlocity_cmt__Premises__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>vlocity_cmt__ParentPremisesId__c</columns>
    <columns>vlocity_cmt__PremisesType__c</columns>
    <columns>vlocity_cmt__PropertyOwnerAccountId__c</columns>
    <columns>vlocity_cmt__Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>